# PulseNet

./: .gitignore  COMING_SOON.md  LICENSE  README.md  index.html  log.txt  package-lock.json  package.json  vite.config.js
dist-electron/: main.js  preload.js
src/: index.html  main.js  preload.js  renderer.js
src-tauri/: Cargo.toml  build.rs  nsis-template.nsi  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/wix/: legacy-nsis-cleanup.wxs
src/renderer/: App.jsx  GitHubIcon.jsx  ThemeToggle.jsx  styles.css
